Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.10.x, 1.11.0
-
None
-
None
Description
With the following authorization file:
[groups] readonly = jconstant [/] $anonymous = ~@readonly = rw @readonly = r
access to any repository fails for an authenticated user that is not in the @readonly group.
$ svn list --username jrandom .../repo svn: E170001: Authorization failed
Reported on dev@ by Pavel Goran.
Attachments
Issue Links
- mentioned in
-
Page Loading...